--- a/todolist-app/src/components/TodoItem/TodoItem.css
+++ b/todolist-app/src/components/TodoItem/TodoItem.css
@@ -11,7 +11,7 @@
 }
 
 .edit-todolist {
-    width: 30px;
-    margin: 0 20px;
+    width: 18px;
+    margin: 1px 10px 1px 12px;
     cursor: pointer;
 }
