--- a/todolist-app/src/components/TodoForm/TodoForm.css
+++ b/todolist-app/src/components/TodoForm/TodoForm.css
@@ -3,18 +3,13 @@
     --hover-input-color: #a47cdb;
 }
 
-
-/*input css*/
-
 input {
     padding: 8px;
-    margin: 0 10px;
+    margin: 10px -10px 10px -15px;
+    text-align: center;
     font-family: cursive, bold;
     color: black;
 }
-
-
-/*button css*/
 
 button {
     display: inline-block;
@@ -36,5 +31,4 @@ button:hover {
     border: 2px solid var(--hover-input-color);
     color: whitesmoke;
     box-shadow: 2px 2px 6px rgba(106, 54, 158, 0.9);
-    transition: background-color 0.25s, border 0.25s, color 0.25s, box-shadow 0.25s;
 }
