--- a/todolist-app/src/components/TodoItem/TodoItem.css
+++ b/todolist-app/src/components/TodoItem/TodoItem.css
@@ -1,10 +1,10 @@
 /*To Do List Items*/
 
 .todo-item {
-    padding: 15px;
+    padding: 17px;
     border: 4px solid rgb(88, 11, 11);
     box-shadow: 0 0 20px 10px rgba(0, 0, 0, 0.4) inset;
-    margin: 5px;
+    margin: 5px 10px 5px 10px;
     display: flex;
     align-items: center;
     justify-content: space-between;
