--- a/todolist-app/src/components/TodoForm/TodoForm.css
+++ b/todolist-app/src/components/TodoForm/TodoForm.css
@@ -4,15 +4,18 @@
 }
 
 input {
-    padding: 5px;
-    margin: 10px -10px 10px -15px;
+    padding: 7px;
+    display: flex;
     text-align: center;
-    font-family: cursive, bold;
+    font-family: curisve, bold;
+    margin-top: 10px;
+    margin-left: 5px;
+    margin-bottom: 10px;
+    margin-right: 5px;
     color: black;
 }
 
 button {
-    display: inline-block;
     font-family: cursive, bold;
     padding: 6px;
     color: var(--main-input-color);
@@ -22,6 +25,11 @@ button {
     cursor: pointer;
     color: whitesmoke;
     background-color: rgb(87, 9, 84);
+    margin-bottom: 20px;
+    margin-right: 5px;
+    margin-left: 5px;
+    float: left;
+    display: inline;
 }
 
 button:hover {
@@ -29,4 +37,18 @@ button:hover {
     border: 2px solid var(--hover-input-color);
     color: whitesmoke;
     box-shadow: 2px 2px 6px rgba(106, 54, 158, 0.9);
+}
+
+label {
+    display: flex;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 10px;
+}
+
+.label2 {
+    display: flex;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 10px;
 }
