--- a/todolist-app/src/components/TodoItem/TodoItem.css
+++ b/todolist-app/src/components/TodoItem/TodoItem.css
@@ -3,15 +3,19 @@
 .todo-item {
     padding: 17px;
     border: 4px solid rgb(88, 11, 11);
-    box-shadow: 0 0 20px 10px rgba(0, 0, 0, 0.4) inset;
-    margin: 5px 10px 5px 10px;
+    box-shadow: 0 0 20px 10px rgba(168, 51, 51, 0.4) inset;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
+
+/*Pencil clicker*/
+
 .edit-todolist {
-    width: 18px;
-    margin: 1px 10px 1px 12px;
+    width: 30px;
     cursor: pointer;
+    text-align: center;
 }
