--- a/todolist-app/src/components/TodoList/TodoList.css
+++ b/todolist-app/src/components/TodoList/TodoList.css
@@ -3,5 +3,7 @@
 .todolist-list-container {
     display: flex;
     flex-direction: column;
-    margin: 10px;
+    margin-left: 5px;
+    margin-right: 2px;
+    margin-top: 70px;
 }
