--- a/todolist-app/src/index.css
+++ b/todolist-app/src/index.css
@@ -11,3 +11,23 @@ body {
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
+
+@media only screen and (min-width: 800px) {
+    .todo-item {
+        display: flex;
+    }
+    label {
+        display: inline;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        margin-left: 10px;
+        margin-right: 350px;
+    }
+    .label2 {
+        display: inline;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        margin-left: 10px;
+        margin-right: 320px;
+    }
+}
