--- a/todolist-app/src/App.css
+++ b/todolist-app/src/App.css
@@ -1,28 +1,27 @@
 /*App CSS*/
 
-.App {
-    text-align: center;
-}
-
-.App-header {
-    background-color: #4060a0;
-    height: 200px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    font-size: 50px;
-    color: black;
-}
-
-.App-link {
-    color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-    from {
-        transform: rotate(0deg);
+@media only screen and (min-width: 100px) {
+    .App {
+        text-align: center;
     }
-    to {
-        transform: rotate(360deg);
+    .App-header {
+        background-color: #4060a0;
+        height: 200px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        font-size: 50px;
+        color: black;
+    }
+    .App-link {
+        color: #61dafb;
+    }
+    @keyframes App-logo-spin {
+        from {
+            transform: rotate(0deg);
+        }
+        to {
+            transform: rotate(360deg);
+        }
     }
 }
