--- a/todolist-app/src/components/TodoList/TodoList.css
+++ b/todolist-app/src/components/TodoList/TodoList.css
@@ -1,9 +1,12 @@
 /*To Do List*/
 
-.todolist-list-container {
-    display: flex;
-    flex-direction: column;
-    margin-left: 5px;
-    margin-right: 2px;
-    margin-top: 70px;
+@media only screen and (min-width: 100px) {
+    .todolist-list-container {
+        display: flex;
+        flex-direction: column;
+        margin-left: 5px;
+        margin-right: 2px;
+        margin-top: 70px;
+        width: inherit;
+    }
 }
