--- a/todolist-app/src/index.css
+++ b/todolist-app/src/index.css
@@ -1,18 +1,20 @@
 /*Body*/
 
-body {
-    margin: 0;
-    font-family: cursive, Bold;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    background-color: #f7e3dc;
+@media only screen and (min-width: 300px) {
+    body {
+        margin: 0;
+        font-family: cursive, Bold;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+        background-color: #f7e3dc;
+    }
+    code {
+        font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+    }
 }
 
-code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
-}
 
-@media only screen and (min-width: 800px) {
+/*@media only screen and (min-width: 450px) {
     .todo-item {
         display: flex;
     }
@@ -30,4 +32,4 @@ code {
         margin-left: 10px;
         margin-right: 320px;
     }
-}
+}*/
